// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post when comments are set to display renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      Object {
        "alignItems": "stretch",
        "height": "100%",
      },
    ]
  }
>
  <Tabs
    display="comments"
    onPressComments={[Function]}
    onPressPost={[Function]}
  />
  <Comments
    comments={
      Array [
        Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/profile-pic-may.jpg",
            },
            "name": "May F",
          },
          "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "dateCreated": 2019-01-01T00:00:00.000Z,
          "id": "21097",
          "replies": Array [],
          "title": "Meu pai fez o que ela mandou…",
          "totalReplies": 0,
        },
      ]
    }
    description="A string"
    postId="10387-314fs-12asdbj"
  />
</View>
`;

exports[`Post when the body is set to display renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <Tabs
    display="body"
    onPressComments={[Function]}
    onPressPost={[Function]}
  />
  <View>
    <Body
      date={2000-01-01T00:00:00.000Z}
      description="A string"
      imagePath={
        Object {
          "testUri": "../../../app/assets/images/image_post_1.jpg",
        }
      }
    />
    <Footer
      avatarPath={
        Object {
          "testUri": "../../../app/assets/images/empower_two_women_logo.png",
        }
      }
    />
  </View>
</View>
`;

exports[`Post when the body is set to display renders correctly if not description is provided 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <Tabs
    display="body"
    onPressComments={[Function]}
    onPressPost={[Function]}
  />
  <View>
    <Body
      date={2000-01-01T00:00:00.000Z}
      description={null}
      imagePath={
        Object {
          "testUri": "../../../app/assets/images/image_post_1.jpg",
        }
      }
    />
    <Footer
      avatarPath={
        Object {
          "testUri": "../../../app/assets/images/empower_two_women_logo.png",
        }
      }
    />
  </View>
</View>
`;
